<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CareLess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_note">New Text</string>
    <string name="pln_trp">New Trip</string>
    <string name="pln_trp_btn_hnt">Click to plan your trip...</string>
    <string name="frm_lbl_str">From:</string>
    <string name="to_lbl_str">To:</string>
    <string name="frm_entry_fld_hnt">From...</string>
    <string name="to_entry_fld_hnt">To...</string>
    <string name="date_lbl_str">Date:</string>
    <string name="date_entry_fld_hnt">Trip start date...</string>
    <string name="old_trips">Old Trips</string>
    <string name="lst_trp_btn">Last Trip</string>
    <string name="flght_lbl_str">Flight :</string>
    <string name="dept_tm_str">Dpt.Time :</string>
    <string name="arrv_lbl_str">Arr.Time :</string>
    <string name="prc_lbl_str"> $ :</string>
    <string name="arrow_str"><![CDATA[---->]]></string>


</resources>
